feat(tasks): tasks are customizable (interval, status) using the interface
